# ChangeLog for dev-libs/apr
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/apr/ChangeLog,v 1.91 2007/09/08 20:05:24 hollow Exp $

*apr-1.2.11 (08 Sep 2007)

  08 Sep 2007; Benedikt Böhm <hollow@gentoo.org> +apr-1.2.11.ebuild:
  version bump; #191733

  31 Jul 2007; Christian Heim <phreak@gentoo.org> apr-1.2.9.ebuild:
  The version bump wasn't designed to go straight to stable.

*apr-1.2.9 (30 Jul 2007)

  30 Jul 2007; Benedikt Böhm <hollow@gentoo.org> +apr-1.2.9.ebuild:
  version bump

  27 Jun 2007; Lars Weiler <pylon@gentoo.org> apr-1.2.8.ebuild:
  Stable on ppc; bug #178264.

  27 Jun 2007; Jeroen Roovers <jer@gentoo.org> apr-1.2.8.ebuild:
  Stable for HPPA (bug #178264).

  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> apr-1.2.8.ebuild:
  alpha stable wrt #178264

  13 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> apr-1.2.8.ebuild:
  Stable on sparc wrt #178264

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> apr-1.2.8.ebuild:
  ia64 stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> apr-1.2.8.ebuild:
  Stable on ppc64

  12 Apr 2007; Christian Faulhammer <opfer@gentoo.org> apr-1.2.8.ebuild:
  stable amd64, bug 168287

  11 Apr 2007; Christian Heim <phreak@gentoo.org> apr-1.2.8.ebuild:
  Fix WANT_AUTO*, according to #172978.

  03 Mar 2007; Marius Mauch <genone@gentoo.org> apr-0.9.12.ebuild,
  apr-0.9.13.ebuild:
  Replacing einfo with elog

  25 Feb 2007; Christian Faulhammer <opfer@gentoo.org> apr-1.2.8.ebuild:
  stable x86; bug 168287

  29 Jan 2007; Christian Heim <phreak@gentoo.org> apr-0.9.13.ebuild:
  Reverting the KEYWORDS to ~arch, accidently commited straight to arch.

*apr-0.9.13 (28 Jan 2007)

  28 Jan 2007; Christian Heim <phreak@gentoo.org> +apr-0.9.13.ebuild:
  Version bump, new upstream version. Cleaning up the ebuild a bit.

  28 Jan 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,