@@ -22,10 +22,10 @@ EBUILD apr-0.9.13.ebuild 2470 RMD160 2a14cfdfb020951e54dae50338140bcbc6055d31 SH
 MD5 854d5bd9f63b0d22a19063eedfcd42b9 apr-0.9.13.ebuild 2470
 RMD160 2a14cfdfb020951e54dae50338140bcbc6055d31 apr-0.9.13.ebuild 2470
 SHA256 dc4e87ae2254e1eb4e8c491ee43515d8a7cd472a8fe6a01f2a5a57b7ef007674 apr-0.9.13.ebuild 2470
-EBUILD apr-1.2.11.ebuild 2669 RMD160 96a155bef1015cfc4fa290136bee8a1140671fd7 SHA1 6b5e0824db554c9e8aa82111e12db6008ce77381 SHA256 f970f30db883b5d79112f744a19fbdb0bb525bc5d2db8c2fe4811f29a196a7e5
-MD5 8656a3db69ca730477a441e78ebb1cac apr-1.2.11.ebuild 2669
-RMD160 96a155bef1015cfc4fa290136bee8a1140671fd7 apr-1.2.11.ebuild 2669
-SHA256 f970f30db883b5d79112f744a19fbdb0bb525bc5d2db8c2fe4811f29a196a7e5 apr-1.2.11.ebuild 2669
+EBUILD apr-1.2.11.ebuild 2869 RMD160 ba0a2ac76ad7226770081948073a31cb0c3874eb SHA1 532f9d41eb60cb45025ea0d425d6069a16b47ff5 SHA256 8bbbf8aa8a583ae96bce7667ab29ecb358d714d07bb2b7c668a03cab7ab9e2d3
+MD5 7407932e4b49c4074c25ea7d65c78533 apr-1.2.11.ebuild 2869
+RMD160 ba0a2ac76ad7226770081948073a31cb0c3874eb apr-1.2.11.ebuild 2869
+SHA256 8bbbf8aa8a583ae96bce7667ab29ecb358d714d07bb2b7c668a03cab7ab9e2d3 apr-1.2.11.ebuild 2869
 EBUILD apr-1.2.8.ebuild 2658 RMD160 0f49d48caac7cd3e0b21702c6a083348ef073814 SHA1 545d62ed7736a10d6430f77caf1ef07603ec8457 SHA256 45da3585ac85159b7c67c5f55405d721207e115107768dd0c32437bdcae9b08b
 MD5 2d244beb48f24a2b86cd7268a292ccc3 apr-1.2.8.ebuild 2658
 RMD160 0f49d48caac7cd3e0b21702c6a083348ef073814 apr-1.2.8.ebuild 2658
@@ -34,10 +34,10 @@ EBUILD apr-1.2.9.ebuild 2668 RMD160 1df25a98a7dc4cdc2f12b277d37c3ed5a620852e SHA
 MD5 396d9ec25dfe10c7f131c3ba831687d1 apr-1.2.9.ebuild 2668
 RMD160 1df25a98a7dc4cdc2f12b277d37c3ed5a620852e apr-1.2.9.ebuild 2668
 SHA256 6254b00a5bb4692549ac496110fd9693c43521e72334d55cdaa1676f03060bf7 apr-1.2.9.ebuild 2668
-MISC ChangeLog 11441 RMD160 b7f038403d776e035c36cc696ebfcd4a5c1b549e SHA1 7c9e9c97e2febf9526df269424cbe9a31f19905a SHA256 37978679d43238fcc46e52e062d613d70f20bd19bb00e930b9dfeff3bfd961d0
-MD5 3021536fff195ca3f18f0b2f705f3013 ChangeLog 11441
-RMD160 b7f038403d776e035c36cc696ebfcd4a5c1b549e ChangeLog 11441
-SHA256 37978679d43238fcc46e52e062d613d70f20bd19bb00e930b9dfeff3bfd961d0 ChangeLog 11441
+MISC ChangeLog 11525 RMD160 8e858aa08cd4d625dcea0510449688b1897668ca SHA1 ff6d50e173077be42da3bc2d78187135b0514725 SHA256 8858dd2d1f19a89c26ca255d268804c2d648d809369cd3aeddab82d79cade07b
+MD5 4eccbc0191dc4ae1744c789e3526757e ChangeLog 11525
+RMD160 8e858aa08cd4d625dcea0510449688b1897668ca ChangeLog 11525
+SHA256 8858dd2d1f19a89c26ca255d268804c2d648d809369cd3aeddab82d79cade07b ChangeLog 11525
 MISC metadata.xml 229 RMD160 bb816bd761846ad578f8c1521a1f1ec6297410f4 SHA1 92fdbcb6a85ece96506733ad67a5e4e74a58a529 SHA256 8e1aafc5385805d45759406a60df79f0ce88aa1df1a58d44b596405d64c9226d
 MD5 17bfbf436c6d4afc4dea019597d048d1 metadata.xml 229
 RMD160 bb816bd761846ad578f8c1521a1f1ec6297410f4 metadata.xml 229
@@ -60,7 +60,7 @@ SHA256 a95069027e84fba499d983e3c971aa39dccb006a0d3453e01096d80c8b415741 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.6 (GNU/Linux)
 
-iD8DBQFG4wCMmPFBzbX68WERAvUWAJ4+ffb3SVcqe8yNYp06+Irgj/284wCeJC7a
-mQagAMF4YIe5nxhWtEgHggY=
-=FzV9
+iD8DBQFG45v3mPFBzbX68WERAnX2AKCPS0Yn9Z6f5wyh6AS0qwFH4Lyc8wCfYyui
+Pr7HX4rAuDdI7qdXrwkvP8E=
+=zHFD
 -----END PGP SIGNATURE-----
