@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/apr
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/apr/ChangeLog,v 1.91 2007/09/08 20:05:24 hollow Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/apr/ChangeLog,v 1.92 2007/09/09 07:08:30 hollow Exp $
+
+  09 Sep 2007; Benedikt Böhm <hollow@gentoo.org> apr-1.2.11.ebuild:
+  fix #188485
 
 *apr-1.2.11 (08 Sep 2007)
 
